force-app/main/default/objects/Case/fields/DevOpsDemo__c.field-meta.xml
<CustomField>
    <fullName>DevOpsDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>testsets</description>
    <label>DevOpsDemo</label>
    <type>Checkbox</type>
</CustomField>