force-app/main/default/objects/Case/fields/Escalation_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Recommended__c</fullName>
    <label>Escalation Recommended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>