force-app/main/default/objects/Case/fields/Potential_Churn_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Potential_Churn_Indicator__c</fullName>
    <label>Potential Churn Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Secure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>