force-app/main/default/objects/Case/fields/Reply_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Reply_Suggestion__c</fullName>
    <label>Reply Suggestion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>