force-app/main/default/objects/Case/fields/Wrap_Up__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up__c</fullName>
    <label>Wrap Up</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>